Fully rewrite PluralKit compatibility to only delay PluralKit users' messages.